# encuestum

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  start.sh
backend/: Dockerfile  dev-postgres.sh  pyproject.toml  requirements.txt  run-dev.sh  test_e2e.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_invites_verify.py  0003_assets.py  0004_superadmin.py  0005_survey_close.py  0006_webhooks.py  0007_org_subdomain.py  0008_ai_providers.py  0009_survey_access.py  0010_notify_emails.py  0011_thankyou_redirect.py  0012_survey_visits.py  0013_perf_indexes.py  0014_require_captcha.py  0015_survey_opens_at.py  0016_survey_grading_message.py  0017_survey_deleted_at.py  0018_survey_report.py
backend/app/: accounts.py  ai_config.py  ai_usage.py  captcha.py  config.py  db.py  deps.py  email.py  exporting.py  grading.py  llm.py  llm_calls.py  lockatus_client.py  logging_conf.py  main.py  migrate.py  models.py  net_guard.py  notify.py  ratelimit.py  schemas.py  schemas_auth.py  security.py  storage.py  summarizing.py  webhooks.py
backend/app/routers/: admin.py  (+10 more)
backend/tests/: conftest.py  test_access.py  test_ai_providers.py  test_assets.py  test_auth.py  test_crosstab.py  test_export.py  test_grading_imagepicker.py  test_invites_reset.py  test_orgs.py  test_panel.py  test_report.py  test_security.py  test_storage.py  test_subdomain.py  test_summary_extras.py  test_survey_close.py  test_surveys.py  test_trash.py  test_webhooks.py
(+100 files in other folders)
